JeevanRakshak/force-app/main/default/objects/Flow_Error_Log__c/Flow_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Flow_Error_Log</label>
    <nameField>
        <label>Flow_Error_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow_Error_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>