JeevanRakshak/force-app/main/default/objects/Flow_Error_Log__c/fields/Element_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Element_Name_c__c</fullName>
    <label>Element_Name__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>