JeevanRakshak/force-app/main/default/objects/Flow_Error_Log__c/fields/Emergency_Case__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Case</label>
    <referenceTo>Emergency_Case__c</referenceTo>
    <relationshipLabel>Flow_Error_Logs</relationshipLabel>
    <relationshipName>Flow_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>