JeevanRakshak/force-app/main/default/objects/Flow_Error_Log__c/fields/Error_Message_c__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_c__c</fullName>
    <label>Error_Message__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>