JeevanRakshak/force-app/main/default/objects/Flow_Error_Log__c/fields/Error_Timestamp_c__c.field-meta.xml
<CustomField>
    <fullName>Error_Timestamp_c__c</fullName>
    <label>Error_Timestamp__c</label>
    <type>DateTime</type>
</CustomField>